images and link

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,9 @@
             <div class="col-sm-4 positionrel">
               <img class="imagefamily" src="assets/family.jpg" alt="Hangman">
                   <div class="row">
-                      <div class="col-sm-12 positionport"><p>Hangman</p></div>
+                      <div class="col-sm-12 positionport"><p>
+                        <a href="Word-Guess-Game/">
+                      Hangman</a></p></div>
 
                   </div>
 
@@ -65,9 +67,10 @@
 
         <div class="row">
             <div class="col-sm-4 ">
-              <img class="imagefamily" src="assets/family.jpg" alt="Trivia Game">
+              <img class="imagefamily" src="assets/trivia.png" alt="Trivia Game">
               <div class="row">
-                  <div class="col-sm-12 positionport"><p>Trivia Game</p></div>
+                  <div class="col-sm-12 positionport"><p><a href= "TriviaGame/">Trivia Game</a>
+                  </p></div>
 
               </div>
 
