--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
 
         <div class="row">
             <div class="col-sm-4 positionrel">
-              <img class="imagefamily" src="assets/family.jpg" alt="Hangman">
+              <img class="imagefamily" src="assets/hangman.png" alt="Hangman">
                   <div class="row">
                       <div class="col-sm-12 positionport"><p>
                         <a href="Word-Guess-Game/">
