--- a/contact.html
+++ b/contact.html
@@ -42,8 +42,8 @@
   <div id="main-container" class="container">
     <section class="main-section">
       <h1 class="botbo">Contact</h1>
-
-      <form>
+      <!-- <form action="https://formspree.io/your@email.com" method="POST"  -->
+      <form action="https://formspree.io/brucewilson1103@gmail.com" method="POST">
           <div class="form-group">
               <label for="name">Name</label> <br>
             <input type="text" id="name" name="name" placeholder="John Smith" required="required">
@@ -53,12 +53,12 @@
           
           <div class="form-group">
             <label for="exampleFormControlInput1">Email address</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+            <input type="email" class="form-control" id="exampleFormControlInput1" name="email" placeholder="name@example.com">
           </div>
 
           <div class="form-group">
             <label for="exampleFormControlTextarea1">Message</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            <textarea class="form-control" name="message" id="exampleFormControlTextarea1" rows="3"></textarea>
           </div>
          
           <div class="spacer1"> <input class="btn btn-info" type="submit" value="Submit">
