--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
             </div>
 
             <div class="col-sm-4 ">
-                <img class="imagefamily" src="assets/family.jpg" alt="RPG Game">
+                <img class="imagefamily" src="assets/Crystals.png" alt="RPG Game">
                 <div class="row">
                     <div class="col-sm-12 positionport"><p> 
                       <a href="unit-4-game/">Crystals Collector</a></p></div>
