portfolio add link to web app

--- a/portfolio.html
+++ b/portfolio.html
@@ -78,10 +78,11 @@
             </div>
 
             <div class="col-sm-4 ">
-                <img class="imagefamily" src="assets/family.jpg" alt="Rutgers Info Widget">
+                <img class="imagefamily" src="assets/mealplanner.png" alt="Mortar and Pestle">
   
                 <div class="row">
-                    <div class="col-sm-12 positionport"><p>Rutgers Info Widget</p></div>
+                    <div class="col-sm-12 positionport"><p><a href = "https://brucewilson1103.github.io/WhatsForDinner/">Meal Planner Web App Group Collaboration</a>
+                    </p></div>
 
                 </div>
               </div>
